updated the homepage url

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "clicksco/bingads",
     "description": "This is clicksco bing ads",
-    "homepage": "https://bitbucket.org/Clicksco/bingads",
+    "homepage": "https://github.com/usmanzafar/Bing-Ads-Reporting",
     "license": "Private",
     "authors": [
         {
